feat(json-view): add json_visualizer and update minor UI tweaks

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ description: A lightweight Dio HTTP inspector with clean minimal UI.
 homepage: https://github.com/7wilightxdev/dio_spy
 repository: https://github.com/7wilightxdev/dio_spy
 version: 0.0.1
+publish_to: none
 
 environment:
   sdk: ^3.0.0
@@ -13,6 +14,7 @@ dependencies:
     sdk: flutter
   dio: ">=5.0.0 <6.0.0"
   shake_gesture: ^2.0.0
+  json_visualizer: 0.0.2
 
 dev_dependencies:
   flutter_test:
